--- a/www/leaflet-custom.css
+++ b/www/leaflet-custom.css
@@ -1,7 +1,24 @@
-#map {
+#mapcontainer {
 	width: 98%;
 	height: 98%;
 	margin: 1% 1% 1% 1%;
 	image-rendering: -moz-crisp-edges; /* firefox */
 	image-rendering: pixelated; /* hopefully everyone eventually */
+}
+
+#map {
+	width: 100%;
+	height: 100%;
+	image-rendering: -moz-crisp-edges; /* firefox */
+	image-rendering: pixelated; /* hopefully everyone eventually */
 } 
+
+#info {
+	background:#fff;
+	position:absolute;
+	top:calc(10px + 1%);
+	right:calc(10px + 1%);
+	padding:10px;
+	z-index:100;
+	border-radius:3px;
+}
