--- a/www/leaflet-custom.css
+++ b/www/leaflet-custom.css
@@ -2,15 +2,19 @@
 	width: 98%;
 	height: 98%;
 	margin: 1% 1% 1% 1%;
-	image-rendering: -moz-crisp-edges; /* firefox */
-	image-rendering: pixelated; /* hopefully everyone eventually */
+	image-rendering: -moz-crisp-edges; /* Firefox */
+	image-rendering: -webkit-crisp-edges; /* Safari */
+	image-rendering: pixelated; /* Chromium */
+	-ms-interpolation-mode: nearest-neighbor; /* iexplore.exe (but not edge) */
 }
 
 #map {
 	width: 100%;
 	height: 100%;
-	image-rendering: -moz-crisp-edges; /* firefox */
-	image-rendering: pixelated; /* hopefully everyone eventually */
+	image-rendering: -moz-crisp-edges; /* Firefox */
+	image-rendering: -webkit-crisp-edges; /* Safari */
+	image-rendering: pixelated; /* Chromium */
+	-ms-interpolation-mode: nearest-neighbor; /* iexplore.exe (but not edge) */
 } 
 
 #info {
