--- a/www/leaflet-custom.css
+++ b/www/leaflet-custom.css
@@ -1,7 +1,13 @@
+html, body { font-size: 100%; }
+body {
+	margin: 0;
+	font-family: sans-serif;
+}
+
 #mapcontainer {
-	width: 98%;
-	height: 98%;
-	margin: 1% 1% 1% 1%;
+	width: 100%;
+	height: 100%;
+	margin: 0;
 	image-rendering: -moz-crisp-edges; /* Firefox */
 	image-rendering: -webkit-crisp-edges; /* Safari */
 	image-rendering: pixelated; /* Chromium */
